objects/G2Crowd__G2_Favorite__c.object
<CustomObject>
    <fields>
        <fullName>G2Crowd__G2_Asset_Folder__c</fullName>
        <label>G2 Asset Folder</label>
        <referenceTo>G2Crowd__G2_Asset_Folder__c</referenceTo>
        <relationshipLabel>G2 Favorites</relationshipLabel>
        <relationshipName>G2_Favorites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G2 Asset</label>
        <referenceTo>G2Crowd__G2_Asset__c</referenceTo>
        <relationshipLabel>G2 Favorites</relationshipLabel>
        <relationshipName>G2_Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G2 Review</label>
        <referenceTo>G2Crowd__G2_Review__c</referenceTo>
        <relationshipLabel>G2 Favorites</relationshipLabel>
        <relationshipName>G2_Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2Crowd__Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>G2Crowd__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>G2_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>G2 Favorite</label>
    <nameField>
        <label>G2 Favorite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G2 Favorites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>